force-app/main/default/objects/TravelPackage__c/TravelPackage__c.object-meta.xml
<CustomObject>
    <label>TravelPackage</label>
    <nameField>
        <label>Travel Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TravelPackages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>