force-app/main/default/objects/TravelPackage__c/fields/Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Days__c</fullName>
    <label>Duration in Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>