force-app/main/default/objects/TravelPackage__c/fields/Guide_Included__c.field-meta.xml
<CustomField>
    <fullName>Guide_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guide Included</label>
    <type>Checkbox</type>
</CustomField>