force-app/main/default/objects/TravelPackage__c/fields/Guide_Languages__c.field-meta.xml
<CustomField>
    <fullName>Guide_Languages__c</fullName>
    <label>Guide Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>