force-app/main/default/objects/TravelPackage__c/fields/Insurance_Included__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Included</label>
    <type>Checkbox</type>
</CustomField>