force-app/main/default/objects/TravelPackage__c/fields/Maximum_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Group_Size__c</fullName>
    <label>Maximum Group Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>