force-app/main/default/objects/TravelPackage__c/fields/Meals_Included__c.field-meta.xml
<CustomField>
    <fullName>Meals_Included__c</fullName>
    <label>Meals Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Breakfast Only</fullName>
            </value>
            <value>
                <fullName>Half Board</fullName>
            </value>
            <value>
                <fullName>Full Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>