force-app/main/default/objects/TravelPackage__c/fields/Places_Covered__c.field-meta.xml
<CustomField>
    <fullName>Places_Covered__c</fullName>
    <label>Places Covered</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>