force-app/main/default/objects/TravelPackage__c/fields/Preferred_Guide_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Guide_Language__c</fullName>
    <label>Preferred Guide Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>