force-app/main/default/objects/TravelPackage__c/fields/Transportation_Modes__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Modes__c</fullName>
    <label>Transportation Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Private Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>