force-app/main/default/objects/TravelPackage__c/fields/Visa_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Visa_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Assistance</label>
    <type>Checkbox</type>
</CustomField>